--- a/package.json
+++ b/package.json
@@ -37,6 +37,9 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.5.0",
+    "@react-three/postprocessing": "^3.0.4",
     "@types/three": "^0.182.0",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
@@ -49,6 +52,7 @@
     "lucide-react": "^0.454.0",
     "next": "15.2.8",
     "next-themes": "latest",
+    "postprocessing": "^6.38.2",
     "react": "^19",
     "react-day-picker": "8.10.1",
     "react-dom": "^19",
@@ -59,6 +63,7 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.182.0",
+    "three-stdlib": "^2.36.1",
     "vaul": "^0.9.6",
     "zod": "^3.24.1"
   },
